# youtube-tunnel

./: .drone.yml  .gitignore  Dockerfile  Makefile  build.gradle  docker-compose.yml  settings.gradle
_bmad-output/: project-context.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/_config/ides/: antigravity.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
api/: Dockerfile  Makefile  build.gradle  docker-compose.yml  settings.gradle
api/common/: build.gradle
api/mainservice/: build.gradle
api/worker/: build.gradle
backend/: Cargo.toml
backend/api/: .env.local  Cargo.toml
backend/api/service/: Cargo.toml
backend/api/service/src/: lib.rs  video.rs  video_job_producer.rs  video_player.rs  video_search.rs
backend/api/shared/: Cargo.toml
backend/api/shared/src/: lib.rs
backend/api/shared/src/config/: logger.rs  redis_pool.rs
backend/api/shared/src/errors/: app_error.rs
backend/api/shared/src/model/: video_player.rs  video_search.rs
backend/api/src/: main.rs  server.rs
backend/api/src/config/: logger.rs  mod.rs  redis_pool.rs
backend/api/src/errors/: app_error.rs  mod.rs
backend/api/src/handlers/: mod.rs  video.rs  video_player.rs  video_search.rs
backend/api/src/management/: handlers.rs  service.rs
backend/api/src/model/: mod.rs  video_player.rs
backend/api/src/player/: handlers.rs  mod.rs  producer.rs  service.rs
backend/api/src/search/: handlers.rs  service.rs
backend/api/src/services/: mod.rs  video.rs  video_job_producer.rs  video_player.rs  video_search.rs
backend/api/web/: Cargo.toml
backend/api/web/src/: lib.rs  server.rs
backend/api/web/src/controllers/: mod.rs  video.rs  video_player.rs  video_search.rs
backend/shared/: Cargo.toml
backend/shared/src/config/: logger.rs  minio.rs  mod.rs
backend/shared/src/models/: video_search.rs
backend/worker/: .env.local  Cargo.toml
backend/worker/service/: Cargo.toml
backend/worker/service/src/: job_consumer.rs  lib.rs
backend/worker/shared/: Cargo.toml
backend/worker/shared/src/config/: cookie_credential.rs  minio.rs  mod.rs
backend/worker/shared/src/model/: video_player.rs
backend/worker/src/: main.rs  server.rs
backend/worker/src/config/: cookie_credential.rs  logger.rs  minio.rs  mod.rs  redis_pool.rs
backend/worker/src/model/: mod.rs  video_player.rs
backend/worker/src/pipeline/: consumer.rs  consumer.rs.patch
backend/worker/src/services/: job_consumer.rs  mod.rs
backend/worker/web/: Cargo.toml
backend/worker/web/src/: lib.rs  server.rs
deploy/: Jenkinsfile.groovy
deploy/compose/: app-docker-compose.local.yml  app-docker-compose.yml  base-docker-compose.local.yml  base-docker-compose.yml  redis-entrypoint.sh
deploy/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
docs/: api-contracts-api.md  architecture-api.md  architecture-web.md  architecture-worker.md  component-inventory-web.md  deployment-guide.md  development-guide.md  index.md  integration-architecture.md  project-overview.md  project-parts.json  project-scan-report.json  source-tree-analysis.md
src/main/resources/: application.yml
web/: eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/nginx/: default.conf
web/src/: ApiContext.tsx  App.tsx  main.tsx
web/src/assets/: NavMenu.tsx  SearchIcon.tsx  SettingLogo.tsx  VideoExitFullScreenLogo.tsx  VideoFullLogo.tsx  VideoMutedLogo.tsx  VideoPauseLogo.tsx  VideoSoundLogo.tsx  YoutubeLogo.tsx  index.ts
web/src/components/: index.ts
web/src/hook/: index.ts  useFetch.tsx
web/src/hooks/: useVideoStatus.ts
web/src/pages/: index.ts
web/src/services/: api.base.ts  index.ts  search_service.ts  stream_proxy_service.ts  useApi.ts  video.ts
web/src/styles/: index.scss
web/src/types/: icon.type.ts  index.ts  video.type.ts  vite-env.d.ts
(+112 files in other folders)
