[package]
name = "youtube-tunnel-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
log = "0.4.28"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# Web
actix-web = "4.11.0"
serde = { version = "1.0.228", features = ["derive"] }

# minio
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"

# tokio
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"

thiserror = "2.0.17"

dotenvy = "0.15.7"
listenfd = "1.0.2"
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1", "serde"] }
percent-encoding = "2.3"

reqwest = "0.12.24"
serde_json = "1.0.145"
base64 = "0.22.1"
futures = "0.3.31"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
actix-cors = "0.7.1"
tokio-cron-scheduler = "0.15.0"
