[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Logs
log = "0.4.28"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# Models
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Infra
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1", "serde"] }

# Other
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
dotenvy = "0.15.7"
percent-encoding = "2.3.2"
