[package]
name = "youtube-tunnel-worker"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "service", "shared", "web"]

[dependencies]
web = {path = "web"}
actix-web = "4.11.0"

[workspace.dependencies]
# Core
log = "0.4.28"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter", "fmt"] }

# Web
actix-web = "4.11.0"
serde = { version = "1.0.228", features = ["derive"]  }

# minio
aws-config = "1.5"
aws-sdk-s3 = "1.21"

# tokio
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"

thiserror = "2.0.17"

dotenvy = "0.15.7"
listenfd = "1.0.2"
deadpool-redis = { version = "0.22.0" , features = ["rt_tokio_1", "serde"] }

serde_json = "1.0.145"

