[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]

# Internal
shared = { path = "../shared" }

# External
reqwest.workspace = true
anyhow.workspace = true
serde_json.workspace = true
base64.workspace = true
futures.workspace = true

aws-sdk-s3.workspace = true
tracing.workspace = true

deadpool-redis.workspace = true
tokio.workspace = true
tokio-cron-scheduler.workspace = true
