[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
serde.workspace = true
actix-web.workspace = true

anyhow.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true

# Logger
tracing.workspace = true
tracing-subscriber.workspace = true

# Redis pool
deadpool-redis.workspace = true
