[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = {path = "../shared"}
service = {path = "../service"}

actix-web.workspace = true

serde.workspace = true
dotenvy.workspace = true
listenfd.workspace = true
deadpool-redis.workspace = true
tokio.workspace = true

# Logger
log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

